resources/skin.less
/* ... */
.content__header-tabs {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  font-family: @font-family-action-bar;

  .mw-portlet {
    margin-top: 10px;
    border-bottom: 1px solid @border-color-header-tab;

    a {
      font-size: 0.85em;
      margin: 0 5px;
      color: @color-accent-header-tab;
      font-weight: bold;
      padding-bottom: 6px;
      display: inline-block;
    }
  }
}

.mw-portlet-namespaces {
  li.selected {
    border-bottom: 2px solid @color-accent-header-tab;
    margin-bottom: -1px;
    a {
      color: @color-accent-header-tab-selected;
    }

  }

  li.new {
    a {
      color: @color-accent-header-tab-new;
    }
  }
}

.mw-portlet-views {
  li.selected {
    display: none;
  }

  .mw-portlet-cactions {
    li a {
      color: @text-color-portlet-item;
    }
  }
}

.mw-portlet-variants {
  .mw-portlet-body ul {
    min-width: 120px;
  }
  
  li.selected {
    display: none;
  }
}

.mw-portlet-cactions h3,
.mw-portlet-views li a {
  color: @color-accent-header-tab;
  text-decoration: none;
}

#p-cactions-label,
#p-variants-label,
#p-lang-label,
#p-tb-label {
  font-family: @font-family-action-bar;
  font-size: 0.85em;
  margin: 0 5px;
  padding: 0 0 0 0;
  color: @color-accent-header-tab;
  font-weight: bold;
  display: inline-block;
  overflow: visible;
}

/* TOC */
.toc, body .toc,
.toccolours, body .toccolours {
  border-color: @border-color-toc;
  background-color: @background-color-toc;
}

.tocnumber, body .tocnumber {
  color: @color-toc-number;
}

.toctogglelabel, body .toctogglelabel {
  color: @color-link;
}

.mw-body .toctitle h2 {
  font-family: @font-family;
}

/* INTERFACE MESSAGE BOXES */
/* SOME OF THE CLASS NAMES WILL BE DEPRECATED */
.mw-message-box, .messagebox, body .messagebox {
  background-color: @background-color-interface-message-box-neutral;
  border-color: @border-color-interface-message-box-neutral;
  color: @text-color-interface-message-box-neutral;
}

.mw-message-box-error, .errorbox, body .errorbox {
  background-color: @background-color-interface-message-box-error;
  border-color: @border-color-interface-message-box-error;
  color: @text-color-interface-message-box-error;
}

.mw-message-box-warning, .warningbox, body .warningbox {
  background-color: @background-color-interface-message-box-warning;
  border-color: @border-color-interface-message-box-warning;
  color: @text-color-interface-message-box-warning;
}

.mw-message-box-success, .successbox, body .successbox {
  background-color: @background-color-interface-message-box-success;
  border-color: @border-color-interface-message-box-success;
  color: @text-color-interface-message-box-success;
}

.usermessage, body .usermessage {
  background-color: @background-color-user-message;
  border-color: @border-color-user-message;
  color: @text-color-user-message;
  font-weight: bold;
  margin: 2em 0 1em;
  padding: 0.5em 1em;
  vertical-align: middle;
}

/* TABLES */
.wikitable, body .wikitable {
  background-color: @background-color-wikitable;
  color: @text-color-wikitable;
  border-color: @border-color-wikitable;

  > tr > th,
  > tr > td,
  > * > tr > th,
  > * > tr > td {
    border-color: @border-color-wikitable;
  }

  > tr > th,
  > * > tr > th {
    background-color: @background-color-wikitable-table-head;
  }
}

/* Keep images from overflowing */
.mw-body-content a > img,
.mw-body-content .floatnone > img {
	height: auto !important;
	max-width: 100% !important;
}

a > img,
.floatnone > img {
	// Hopefully these are only templates or something sane to begin with
	// See: T269970
	.mw-body-content table & {
		height: unset !important;
		max-width: unset !important;
	}
}

/* CATEGORIES */

#catlinks {
  margin: 10px 0;
  padding: 5px;
  background-color: @background-color-content;
  border: 1px solid @border-color-content;
  border-radius: 3px;
  box-shadow: @elevation;

  li:first-child {
    padding-left: 0;
  }
}

/* FOOTER */

body > footer {
  background: @background-color-footer;
  color: @text-color-footer;
  flex-grow: 1;

  @media screen and ( min-width: @width-breakpoint-desktop ) {
    padding: 20px 15%;
  }

  @media screen and ( max-width: @width-breakpoint-tablet ) {
    padding: 20px 0;
  }

  li {
    display: inline-block;
    margin-right: 5px;
  }

  a {
    color: @color-footer-link;

    &:active {
      color: @color-footer-link--active;
    }

    &:visited {
      color: @color-footer-link--visited;
    }
  }
}

#footer-info li {
  display: block;
}

#footer-icons li {
  float: right;
  margin: 0 20px 0 0;
  @media screen and (max-width: @width-breakpoint-tablet) {
    clear: both;
    margin-bottom: 0.5em;
  }
}

#footer-repository-link {
  text-align: center;
}

/* The following rules will not be needed in future */
.mw-portlet ul {
  margin: 0;
}

.tright {
  float: right;
  clear: both;
}

.tleft {
  float: right;
  clear: both;
}

/* checkbox hack */
.toggle-list__checkbox {
  position: absolute;
  z-index: -1;
  opacity: 0;
}

.toggle-list__checkbox:checked ~ .toggle-list__list {
  transform: translateX( 0% );
}

.toggle-list__checkbox ~ .toggle-list__mask {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  opacity: 0;
  bottom: 0;
  background: @mask-background;
  z-index: 12;
  visibility: hidden;
  transition: 0.3s cubic-bezier( 0.25, 0.8, 0.5, 1 ) 1ms;
}

.toggle-list__checkbox:checked ~ .toggle-list__mask {
  visibility: visible;
  opacity: 1;
}

/* Icons */
.sidebar__icon {
  cursor: pointer;
  width: 20px;
  height: 20px;
  position: absolute;
  top: 26px;
  overflow: hidden;
  color: transparent;
  left: 20px;
  z-index: 3;
}

.sidebar__icon:before {
  content: '';
  width: 20px;
  display: block;
  height: 20px;
  filter: @icon-filter-header;
  background-image: url( 'data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 width=%2220%22 height=%2220%22 viewBox=%220 0 20 20%22%3E %3Ctitle%3E menu %3C/title%3E %3Cpath d=%22M1 3v2h18V3zm0 8h18V9H1zm0 6h18v-2H1z%22/%3E %3C/svg%3E' );
}
/* ... */

